<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingTop="8dp">

    <LinearLayout
        android:id="@+id/inbox"
        style="@style/DrawerRow">

        <ImageView
            android:id="@+id/inboxIcon"
            style="@style/DrawerIcon"
            android:src="@drawable/ic_inbox_black_24dp" />

        <com.moez.QKSMS.presentation.common.widget.QkTextView
            style="@style/DrawerText"
            android:text="@string/drawer_inbox" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/archived"
        style="@style/DrawerRow">

        <ImageView
            android:id="@+id/archivedIcon"
            style="@style/DrawerIcon"
            android:src="@drawable/ic_folder_black_24dp" />

        <com.moez.QKSMS.presentation.common.widget.QkTextView
            style="@style/DrawerText"
            android:text="@string/drawer_archived" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/scheduled"
        style="@style/DrawerRow"
        android:alpha="0.5">

        <ImageView
            android:id="@+id/scheduledIcon"
            style="@style/DrawerIcon"
            android:src="@drawable/ic_event_black_24dp" />

        <com.moez.QKSMS.presentation.common.widget.QkTextView
            style="@style/DrawerText"
            android:text="@string/drawer_scheduled" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/blocked"
        style="@style/DrawerRow"
        android:alpha="0.5">

        <ImageView
            android:id="@+id/blockedIcon"
            style="@style/DrawerIcon"
            android:src="@drawable/ic_block_black_24dp" />

        <com.moez.QKSMS.presentation.common.widget.QkTextView
            style="@style/DrawerText"
            android:text="@string/drawer_blocked" />

    </LinearLayout>

    <com.moez.QKSMS.presentation.common.widget.Separator
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp" />

    <LinearLayout
        android:id="@+id/settings"
        style="@style/DrawerRow">

        <ImageView
            android:id="@+id/settingsIcon"
            style="@style/DrawerIcon"
            android:src="@drawable/ic_settings_black_24dp" />

        <com.moez.QKSMS.presentation.common.widget.QkTextView
            style="@style/DrawerText"
            android:text="@string/drawer_settings" />

    </LinearLayout>

</LinearLayout>